--- a/cone/src/test/resources/pubman.properties
+++ b/cone/src/test/resources/pubman.properties
@@ -35,8 +35,8 @@ inge.pubman.instance.url=${inge.pubman.instance.url}
 inge.pubman.item.pattern=${inge.pubman.item.pattern}
 inge.pubman.component.pattern=${inge.pubman.component.pattern}
 
-# eSciDoc-ObjId of the external Organisation
-inge.pubman.external.organisation.id=${inge.pubman.external.organisation.id}
+# eSciDoc-ObjId of the external Organization
+inge.pubman.external.organization.id=${inge.pubman.external.organization.id}
 
 # CoNE service URL
 inge.cone.service.url=${inge.cone.service.url.test}
