--- a/model/src/test/resources/pubman.properties
+++ b/model/src/test/resources/pubman.properties
@@ -1,2 +1,2 @@
-# eSciDoc-ObjId of the external Organisation
-inge.pubman.external.organisation.id=${inge.pubman.external.organisation.id}
+# eSciDoc-ObjId of the external Organization
+inge.pubman.external.organization.id=${inge.pubman.external.organization.id}
