--- a/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman_ear/src/main/resources/pubman.properties
@@ -160,8 +160,8 @@ inge.pubman.cookie.version=${inge.pubman.cookie.version}
 
 inge.pubman.csl_editor.instance=${inge.pubman.csl_editor.instance}
 
-# eSciDoc object Id of an organisation that should be handled as "External Organisation".
-inge.pubman.external.organisation.id=${inge.pubman.external.organisation.id}
+# eSciDoc object Id of an organisation that should be handled as "External Organization".
+inge.pubman.external.organization.id=${inge.pubman.external.organization.id}
 
 inge.pubman.favicon.url=${inge.pubman.favicon.url}
 inge.pubman.favicon.apply=${inge.pubman.favicon.apply}
@@ -198,7 +198,7 @@ inge.pubman.presentation.url=${inge.pubman.presentation.url}
 # Icon for authors belonging to root
 inge.pubman.root.authors.icon=${inge.pubman.root.authors.icon}
 # Object Id of an organisation that is the root internal organisation
-inge.pubman.root.organisation.id=${inge.pubman.root.organisation.id}
+inge.pubman.root.organization.id=${inge.pubman.root.organization.id}
 # Name of the organization its (sub-)authors are shown in the overview page
 inge.pubman.root.organization.name=${inge.pubman.root.organization.name}
 
