--- a/transformationManager/src/test/resources/pubman.properties
+++ b/transformationManager/src/test/resources/pubman.properties
@@ -1,5 +1,5 @@
-# eSciDoc-ObjId of the external Organisation
-inge.pubman.external.organisation.id=${inge.pubman.external.organisation.id}
+# eSciDoc-ObjId of the external Organization
+inge.pubman.external.organization.id=${inge.pubman.external.organization.id}
 
 # AA
 inge.aa.instance.url=${inge.aa.instance.url}
@@ -8,7 +8,7 @@ inge.aa.instance.url=${inge.aa.instance.url}
 inge.cone.service.url=${inge.cone.service.url.test}
 
 # eSciDoc-ObjId of the root of the OU tree (used for edoc import)
-inge.pubman.root.organisation.id=${inge.pubman.root.organisation.id}
+inge.pubman.root.organization.id=${inge.pubman.root.organization.id}
 
 inge.pubman.instance.url=${inge.pubman.instance.url}
 inge.pubman.instance.context.path=${inge.pubman.instance.context.path}
