--- a/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman_ear/src/main/resources/pubman.properties
@@ -160,7 +160,7 @@ inge.pubman.cookie.version=${inge.pubman.cookie.version}
 
 inge.pubman.csl_editor.instance=${inge.pubman.csl_editor.instance}
 
-# eSciDoc object Id of an organisation that should be handled as "External Organization".
+# eSciDoc object Id of an organization that should be handled as "External Organization".
 inge.pubman.external.organization.id=${inge.pubman.external.organization.id}
 
 inge.pubman.favicon.url=${inge.pubman.favicon.url}
@@ -197,7 +197,7 @@ inge.pubman.presentation.url=${inge.pubman.presentation.url}
 
 # Icon for authors belonging to root
 inge.pubman.root.authors.icon=${inge.pubman.root.authors.icon}
-# Object Id of an organisation that is the root internal organisation
+# Object Id of an organization that is the root internal organization
 inge.pubman.root.organization.id=${inge.pubman.root.organization.id}
 # Name of the organization its (sub-)authors are shown in the overview page
 inge.pubman.root.organization.name=${inge.pubman.root.organization.name}
