--- a/pom.xml
+++ b/pom.xml
@@ -999,7 +999,7 @@
 		<inge.pubman.component.pattern>/item/$1/component/$2/$3</inge.pubman.component.pattern>
 		<inge.pubman.cookie.version>1.0</inge.pubman.cookie.version>
 		<inge.pubman.csl_editor.instance>http://editor.citationstyles.org</inge.pubman.csl_editor.instance>
-		<inge.pubman.external.organisation.id>ou_persistent22</inge.pubman.external.organisation.id>
+		<inge.pubman.external.organization.id>ou_persistent22</inge.pubman.external.organization.id>
 		<inge.pubman.favicon.apply>true</inge.pubman.favicon.apply>
 		<inge.pubman.favicon.url>/pubman/faces/javax.faces.resources/pubman_favicon_32_32.png</inge.pubman.favicon.url>
 		<inge.pubman.footer.fileName>matomo.js</inge.pubman.footer.fileName>
@@ -1016,7 +1016,7 @@
 		<inge.pubman.privacy.url />
 		<inge.pubman.root.authors.icon />
 		<inge.pubman.root.organization.name />
-		<inge.pubman.root.organisation.id />
+		<inge.pubman.root.organization.id />
 		<inge.pubman.sitemap.max.items>50000</inge.pubman.sitemap.max.items>
 		<inge.pubman.sitemap.retrieve.items>1000</inge.pubman.sitemap.retrieve.items>
 		<inge.pubman.stylesheet.url>/pubman/resources/cssFramework/themes/skin_MPG/styles/theme.css</inge.pubman.stylesheet.url>
@@ -1154,7 +1154,7 @@
 				<inge.pubman.policy.url>http://colab.mpdl.mpg.de/mediawiki/MPG.PuRe_Impressum</inge.pubman.policy.url>
 				<inge.pubman.privacy.url>http://colab.mpdl.mpg.de/mediawiki/MPG.PuRe_Datenschutzhinweis</inge.pubman.privacy.url>
 				<inge.pubman.root.authors.icon>MPG_authors</inge.pubman.root.authors.icon>
-				<inge.pubman.root.organisation.id>ou_persistent13</inge.pubman.root.organisation.id>
+				<inge.pubman.root.organization.id>ou_persistent13</inge.pubman.root.organization.id>
 				<inge.pubman.root.organization.name>Max Planck Society</inge.pubman.root.organization.name>
 			</properties>
 		</profile>
