PDF export via Apache FO, new fonts for PDF Export

--- a/transformationManager/pom.xml
+++ b/transformationManager/pom.xml
@@ -20,6 +20,23 @@
 	</scm>
 
 	<build>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+				<excludes>
+					<exclude>fonts/**</exclude>
+				</excludes>
+			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>false</filtering>
+				<includes>
+					<include>fonts/**</include>
+				</includes>
+			</resource>
+		</resources>
+
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -40,6 +57,8 @@
 			</plugin>
 		</plugins>
 	</build>
+
+
 
 	<dependencies>
 
