--- a/pom.xml
+++ b/pom.xml
@@ -350,16 +350,16 @@
 				<artifactId>docx4j-JAXB-ReferenceImpl</artifactId>
 				<version>11.5.2</version>
 			</dependency>
-			<!-- Required for docx4j -->
-			<dependency>
-				<groupId>org.docx4j</groupId>
-				<artifactId>docx4j-export-fo</artifactId>
-				<version>11.5.2</version>
-			</dependency>
 			<dependency>
 				<groupId>org.docx4j</groupId>
 				<artifactId>docx4j-ImportXHTML-core</artifactId>
 				<version>11.5.0</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.apache.xmlgraphics</groupId>
+				<artifactId>fop</artifactId>
+				<version>2.10</version>
 			</dependency>
 
 			<!-- MapStruct -->
