--- a/pom.xml
+++ b/pom.xml
@@ -1340,8 +1340,8 @@
             <properties>
 				<gfz.citation.style.use>true</gfz.citation.style.use>
                 <gfz.cone.reset.use>true</gfz.cone.reset.use>
-				<gfz.oa.mail.adress>openaccess@gfz-potsdam.de</gfz.oa.mail.adress>
-				<gfz.oa.mail.domain>@gfz-potsdam.de</gfz.oa.mail.domain>
+				<gfz.oa.mail.adress>library@rifs-potsdam.de</gfz.oa.mail.adress>
+				<gfz.oa.mail.domain>@rifs-potsdam.de</gfz.oa.mail.domain>
 				<gfz.oa.mail.subject>RIFSpublic: Open Access</gfz.oa.mail.subject>
 				<gfz.oa.mail.template>OpenAccessMailRIFS.vm</gfz.oa.mail.template>
 				<inge.aa.login.jsp>login_inge_gfz.jsp</inge.aa.login.jsp>
@@ -1355,9 +1355,9 @@
 				<inge.doi.service.create.url />
 				<inge.doi.service.url />
 				<inge.doi.service.use>false</inge.doi.service.use>
-				<inge.email.alternative.moderator>bib@gfz-potsdam.de</inge.email.alternative.moderator>
+				<inge.email.alternative.moderator>library@rifs-potsdam.de</inge.email.alternative.moderator>
 				<inge.email.send.oa.mail.use>true</inge.email.send.oa.mail.use>
-				<inge.email.sender>bib@gfz-potsdam.de</inge.email.sender>
+				<inge.email.sender>library@rifs-potsdam.de</inge.email.sender>
 				<inge.filestorage.seaweed_master_server_ip />
 				<inge.id.types.to.display>ADS,ARXIV,BIBTEX_CITEKEY,BMC,CONE,DOI,EDOC,ISBN,ISI,ISSN,OATYPE,OTHER,PATENT_APPLICATION_NR,PATENT_NR,PATENT_PUBLICATION_NR,PII,PMC,PMID,PND,PUBLISHER,REPORT_NR,RIFSPROJECT,SSRN,URI,URN,ZDB</inge.id.types.to.display>
 				<inge.pid.service.create.path />
@@ -1390,8 +1390,8 @@
 			<properties>
 				<gfz.citation.style.use>true</gfz.citation.style.use>
 				<gfz.cone.reset.use>true</gfz.cone.reset.use>
-				<gfz.oa.mail.adress>openaccess@gfz-potsdam.de</gfz.oa.mail.adress>
-				<gfz.oa.mail.domain>@gfz-potsdam.de</gfz.oa.mail.domain>
+				<gfz.oa.mail.adress>library@rifs-potsdam.de</gfz.oa.mail.adress>
+				<gfz.oa.mail.domain>@rifs-potsdam.de</gfz.oa.mail.domain>
 				<gfz.oa.mail.subject>RIFSpublic: Open Access</gfz.oa.mail.subject>
 				<gfz.oa.mail.template>OpenAccessMailRIFS.vm</gfz.oa.mail.template>
 				<inge.aa.login.jsp>login_inge_gfz.jsp</inge.aa.login.jsp>
@@ -1405,9 +1405,9 @@
 				<inge.doi.service.create.url />
 				<inge.doi.service.url />
 				<inge.doi.service.use>false</inge.doi.service.use>
-				<inge.email.alternative.moderator>bib@gfz-potsdam.de</inge.email.alternative.moderator>
+				<inge.email.alternative.moderator>library@rifs-potsdam.de</inge.email.alternative.moderator>
 				<inge.email.send.oa.mail.use>true</inge.email.send.oa.mail.use>
-				<inge.email.sender>bib@gfz-potsdam.de</inge.email.sender>
+				<inge.email.sender>library@rifs-potsdam.de</inge.email.sender>
 				<inge.filestorage.seaweed_master_server_ip />
 				<inge.id.types.to.display>ADS,ARXIV,BIBTEX_CITEKEY,BMC,CONE,DOI,EDOC,ISBN,ISI,ISSN,OATYPE,OTHER,PATENT_APPLICATION_NR,PATENT_NR,PATENT_PUBLICATION_NR,PII,PMC,PMID,PND,PUBLISHER,REPORT_NR,RIFSPROJECT,SSRN,URI,URN,ZDB</inge.id.types.to.display>
 				<inge.pid.service.create.path />
