--- a/pom.xml
+++ b/pom.xml
@@ -529,13 +529,6 @@
 				<artifactId>log4j-core</artifactId>
 				<version>2.19.0</version>
 			</dependency>
-			<!--
-			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>slf4j-api</artifactId>
-				<version>2.0.6</version>
-			</dependency>
-			-->
 
 			<!-- Spring -->
 			<dependency>
@@ -802,6 +795,9 @@
 						<forceJavacCompilerUse>true</forceJavacCompilerUse>
 						<encoding>${project.build.sourceEncoding}</encoding>
 						<release>${jdk.version}</release>
+						<compilerArgs>
+							<arg>-parameters</arg>
+						</compilerArgs>
 					</configuration>
 				</plugin>
 				<plugin>
