--- a/pubman_logic/pom.xml
+++ b/pubman_logic/pom.xml
@@ -49,6 +49,14 @@
 					<version>8.18.0</version>
 					<pathInitScript>${project.build.testOutputDirectory}/es_scripts/createIndex.script</pathInitScript>
 					<skip>${maven.test.skip}</skip>
+					<environmentVariables>
+						<ES_TMPDIR>${project.build.testOutputDirectory}</ES_TMPDIR>
+					</environmentVariables>
+					<instanceSettings>
+						<properties>
+							<ingest.geoip.downloader.enabled>false</ingest.geoip.downloader.enabled>
+						</properties>
+					</instanceSettings>
 				</configuration>
 				<executions>
 					<execution>
