--- a/pubman_logic/src/test/resources/hibernate.properties
+++ b/pubman_logic/src/test/resources/hibernate.properties
@@ -1,12 +1,12 @@
-hibernate.dialect=de.mpg.mpdl.inge.db.spring.JsonPostgreSQL9Dialect
 hibernate.cache.use_second_level_cache=true
 hibernate.cache.use_query_cache=true
-hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
+hibernate.cache.region.factory_class=jcache
+hibernate.javax.cache.provider=org.ehcache.jsr107.EhcacheCachingProvider
+hibernate.javax.cache.uri=ehcache.xml
 hibernate.jdbc.time_zone=UTC
 #Speed up startup, do not load all metadata from database
-hibernate.temp.use_jdbc_metadata_defaults=false
-
-# Test-specific properties:
-hibernate.hbm2ddl.import_files=/db_scripts/import_new.sql
+hibernate.temp.use_jdbc_metadata_defaults=true
 hibernate.hbm2ddl.auto=create
-show_sql=true
+
+#Use Hibernate 5.3 compatible naming strategy -> https://docs.jboss.org/hibernate/orm/6.0/migration-guide/migration-guide.html
+hibernate.id.db_structure_naming_strategy=legacy
