Fix for Cone upload II

--- a/pom.xml
+++ b/pom.xml
@@ -237,6 +237,11 @@
 			</dependency>
 			<dependency>
 				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-fileupload2-jakarta-servlet6</artifactId>
+				<version>2.0.0-M4</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-text</artifactId>
 				<version>1.10.0</version>
 			</dependency>
@@ -308,11 +313,6 @@
 				<version>2.1</version>
 			</dependency>
 			<dependency>
-				<groupId>commons-fileupload</groupId>
-				<artifactId>commons-fileupload</artifactId>
-				<version>1.5</version>
-			</dependency>
-			<dependency>
 				<groupId>commons-httpclient</groupId>
 				<artifactId>commons-httpclient</artifactId>
 				<version>3.1</version>
@@ -320,7 +320,7 @@
 			<dependency>
 				<groupId>commons-io</groupId>
 				<artifactId>commons-io</artifactId>
-				<version>2.9.0</version>
+				<version>2.19.0</version>
 			</dependency>
 			<dependency>
 				<groupId>commons-net</groupId>
