fix for openAI II

--- a/pom.xml
+++ b/pom.xml
@@ -983,7 +983,7 @@
 		<inge.logic.temporary_filesystem_root_path>/standalone/data/inge_tmp_files/</inge.logic.temporary_filesystem_root_path>
 		<inge.openai.url>https://chat-ai.academiccloud.de/v1/chat/completions</inge.openai.url>
 		<inge.openai.model>meta-llama-3.1-8b-instruct</inge.openai.model>
-		<inge.openai.prompt>Please create a CSL json of the following authors (family, given) copied from a research paper:</inge.openai.prompt>
+		<inge.openai.prompt>Please create a CSL json of the following authors copied from a research paper. In the result give me only the fields familiy and given:</inge.openai.prompt>
 		<inge.openai.temperature>0</inge.openai.temperature>
 		<inge.pid.handle.activated>true</inge.pid.handle.activated>
 		<inge.pid.handle.short>hdl:</inge.pid.handle.short>
