fix for openAI III

--- a/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman_ear/src/main/resources/pubman.properties
@@ -137,11 +137,12 @@ inge.jwt.shared-secret=${inge.jwt.shared-secret}
 
 inge.logic.temporary_filesystem_root_path=${inge.logic.temporary_filesystem_root_path}
 
-inge.openai.url=${inge.openai.url}
 inge.openai.model=${inge.openai.model}
 inge.openai.prompt=${inge.openai.prompt}
-inge.openai.token=${inge.openai.token}
+inge.openai.regex=${inge.openai.regex}
 inge.openai.temperature=${inge.openai.temperature}
+inge.openai.token=${inge.openai.token}
+inge.openai.url=${inge.openai.url}
 
 inge.pid.handle.activated=${inge.pid.handle.activated}
 inge.pid.handle.short=${inge.pid.handle.short}
