--- a/pom.xml
+++ b/pom.xml
@@ -984,6 +984,7 @@
 		<inge.openai.url>https://chat-ai.academiccloud.de/v1/chat/completions</inge.openai.url>
 		<inge.openai.model>meta-llama-3.1-8b-instruct</inge.openai.model>
 		<inge.openai.prompt>Please create a CSL json of the following authors copied from a research paper. In the result give me only the fields familiy and given:</inge.openai.prompt>
+		<inge.openai.regex>```.*?(\\[.*?\\]).*?```</inge.openai.regex>
 		<inge.openai.temperature>0</inge.openai.temperature>
 		<inge.pid.handle.activated>true</inge.pid.handle.activated>
 		<inge.pid.handle.short>hdl:</inge.pid.handle.short>
