Elasticsearch integration for CoNE

--- a/cone_presentation/src/test/resources/pubman.properties
+++ b/cone_presentation/src/test/resources/pubman.properties
@@ -65,3 +65,9 @@ inge.cone.rdf.path=${inge.cone.rdf.path}
 
 #Path to the model.xml file
 inge.cone.modelsxml.path=${inge.cone.modelsxml.path}
+
+#Elasticsearch
+inge.es.rest.host-port=${inge.es.rest.host-port}
+inge.es.rest.path-prefix=${inge.es.rest.path-prefix}
+
+inge.cone.searchindex.enabled=false
