--- a/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman_ear/src/main/resources/pubman.properties
@@ -69,6 +69,7 @@ inge.cone.results.default=${inge.cone.results.default}
 inge.cone.results.maximum=${inge.cone.results.maximum}
 inge.cone.service.url=${inge.cone.service.url}
 inge.cone.subjectVocab=${inge.cone.subjectVocab}
+inge.cone.searchindex.enabled=${inge.cone.searchindex.enabled}
 
 inge.cron.cleanup_staging_files=${inge.cron.cleanup_staging_files}
 inge.cron.cleanup_staging_files.hours=${inge.cron.cleanup_staging_files.hours}
