--- a/pom.xml
+++ b/pom.xml
@@ -938,6 +938,7 @@
 		<inge.cone.service.url.test>https://dev.inge.mpdl.mpg.de/cone/</inge.cone.service.url.test>
 		<inge.cone.service.url>http://localhost:8080/cone/</inge.cone.service.url>
 		<inge.cone.subjectVocab>iso639-3;ddc</inge.cone.subjectVocab>
+        <inge.cone.searchindex.enabled>false</inge.cone.searchindex.enabled>
 		<inge.cron.cleanup_staging_files>0 0 */2 * * *</inge.cron.cleanup_staging_files>
 		<inge.cron.cleanup_staging_files.hours>6</inge.cron.cleanup_staging_files.hours>
 		<inge.cron.fix_broken_imports>0 0 */1 * * *</inge.cron.fix_broken_imports>
