--- a/inge_es_connector/pom.xml
+++ b/inge_es_connector/pom.xml
@@ -154,6 +154,10 @@
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpcore</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpasyncclient</artifactId>
+        </dependency>
 		
 		<dependency>
 			<groupId>org.springframework</groupId>
