--- a/pom.xml
+++ b/pom.xml
@@ -265,6 +265,11 @@
 				<artifactId>httpcore</artifactId>
 				<version>4.4.16</version>
 			</dependency>
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpasyncclient</artifactId>
+                <version>4.1.5</version>
+            </dependency>
 			<dependency>
 				<groupId>org.apache.tika</groupId>
 				<artifactId>tika-core</artifactId>
@@ -373,12 +378,12 @@
 			<dependency>
 				<groupId>org.elasticsearch.client</groupId>
 				<artifactId>elasticsearch-rest-high-level-client</artifactId>
-				<version>8.18.0</version>
+				<version>9.1.5</version>
 			</dependency>
 			<dependency>
 				<groupId>co.elastic.clients</groupId>
 				<artifactId>elasticsearch-java</artifactId>
-				<version>8.18.0</version>
+				<version>9.1.5</version>
 			</dependency>
 
 			<!-- Hibernate -->
