--- a/pom.xml
+++ b/pom.xml
@@ -223,12 +223,12 @@
 			<dependency>
 				<groupId>org.apache.activemq</groupId>
 				<artifactId>artemis-jakarta-client</artifactId>
-				<version>2.28.0</version>
+				<version>2.43.0</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.activemq</groupId>
 				<artifactId>artemis-server</artifactId>
-				<version>2.28.0</version>
+				<version>2.43.0</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.commons</groupId>
@@ -332,6 +332,12 @@
 				<artifactId>commons-net</artifactId>
 				<version>3.9.0</version>
 			</dependency>
+
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>33.5.0-jre</version>
+            </dependency>
 
 			<!-- CSL -->
 			<dependency>
