--- a/pubman_logic/pom.xml
+++ b/pubman_logic/pom.xml
@@ -145,6 +145,10 @@
 			<groupId>org.apache.activemq</groupId>
 			<artifactId>artemis-server</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
 		<!--
 		<dependency>
 			<groupId>org.apache.activemq</groupId>
