--- a/pom.xml
+++ b/pom.xml
@@ -968,8 +968,8 @@
 		<inge.email.sender>pubman@mpdl.mpg.de</inge.email.sender>
 		<inge.email.withauthentication>false</inge.email.withauthentication>
 		<inge.es.password></inge.es.password>
-		<inge.es.rest.host-port.test>localhost:9400</inge.es.rest.host-port.test>
-		<inge.es.rest.host-port>localhost:9200</inge.es.rest.host-port>
+		<inge.es.rest.host-port.test>http://localhost:9400</inge.es.rest.host-port.test>
+		<inge.es.rest.host-port>http://localhost:9200</inge.es.rest.host-port>
 		<inge.es.rest.path-prefix></inge.es.rest.path-prefix>
 		<inge.es.user></inge.es.user>
 		<inge.es.rest.path-prefix.test />
