--- a/pubman_ear/pom.xml
+++ b/pubman_ear/pom.xml
@@ -164,11 +164,11 @@
 							</execution>
 						</executions>
 						<dependencies>
-							<dependency>
-								<groupId>org.apache.ant</groupId>
-								<artifactId>ant-jsch</artifactId>
-								<version>1.10.15</version>
-							</dependency>
+                            <dependency>
+                                <groupId>com.github.mwiede</groupId>
+                                <artifactId>jsch</artifactId>
+                                <version>2.27.5</version>
+                            </dependency>
 						</dependencies>
 					</plugin>
 				</plugins>
